Rewrote references to Java 21 API to fix public build.
PiperOrigin-RevId: 741579761